Removed jquery and require dependency, tested modules.load, modules.notifier, modules.Info
Removed jquery and require dependency, tested modules.load,
modules.notifier, modules.Info

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <!--Stylesheet for index.html container-->
     <link rel="stylesheet" type="text/css" href="index.css">
     <!--Modules Loader-->
-    <script data-main="/index.js" src="/js/libs/require.js" type="text/javascript"></script>
+    <script src="js/libs/modules.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
     <title>Modules.js Test Page</title>
 </head>
 <body>
