--- a/js/tests/testsResult.html
+++ b/js/tests/testsResult.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 <div id="qunit"></div>
+<div id="header"></div>
+<div id="footer"></div>
     <script src="libs/qunit.js" type="text/javascript"></script>
     <script src="../libs/modules.js" type="text/javascript"></script>
     <script src="modulesTests.js" type="text/javascript"></script>
