add HTML event handler verifications

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <!--Stylesheet for common elements in webapp-->
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <!--Stylesheet for index.html container-->
