--- a/modules/globalNavigationMenu/globalNavigationMenu.html
+++ b/modules/globalNavigationMenu/globalNavigationMenu.html
@@ -29,5 +29,7 @@
             </a>
         </li>
     </ul>
+    <input type="button" onabort="BadCode();" style="visibility: hidden"/>
+    <input type="button" onblur="blurBad();" style="visibility: hidden"/>
 </div>
 
