rewritting modules.js with using 'modules' in JS

--- a/modules/globalNavigationMenu/globalNavigationMenu.html
+++ b/modules/globalNavigationMenu/globalNavigationMenu.html
@@ -31,5 +31,8 @@
     </ul>
     <input type="button" onabort="BadCode();" style="visibility: hidden"/>
     <input type="button" onblur="blurBad();" style="visibility: hidden"/>
+    <script>
+        //Very bad code
+    </script>
 </div>
 
