basic loadTemplateList implementations. added loading templates css and js

--- a/templateDemo.html
+++ b/templateDemo.html
@@ -15,7 +15,8 @@
 <div id="container">
     <div class="header"></div>
     <div class="body">
-
+        <div class="bodySimple"></div>
+        <div class="bodyList"></div>
     </div>
     <div class="footer"></div>
 </div>
