--- a/modules.js/testsResult.html
+++ b/modules.js/testsResult.html
@@ -4,14 +4,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Modules.js Tests Result</title>
     <link rel="stylesheet" type="text/css" href="libs/qunit.css">
+    <script src="modules.js" type="text/javascript"></script>
+    <script src="libs/qunit.js" type="text/javascript"></script>
+    <script src="modulesTests.js" type="text/javascript"></script>
 </head>
 <body>
-<div id="qunit"></div>
-<div id="header"></div>
-<div id="footer"></div>
-    <script src="libs/qunit.js" type="text/javascript"></script>
-    <script src="../libs/modules.js" type="text/javascript"></script>
-    <script src="modulesTests.js" type="text/javascript"></script>
+    <div id="qunit"></div>
+    <div class="header"></div>
+    <div class="content"></div>
+    <div class="footer"></div>
+
 </body>
 </html>
 
