Tests for Modules.Loader.load (CSS)

--- a/modules.js/testsResult.html
+++ b/modules.js/testsResult.html
@@ -10,10 +10,7 @@
 </head>
 <body>
     <div id="qunit"></div>
-    <div class="header"></div>
-    <div class="content"></div>
-    <div class="footer"></div>
-
+    <div class="loadTest"></div>
 </body>
 </html>
 
