Added data modulesjs_moduleID attribute for conteiner class for current module`s html identify, when many modules on page

--- a/modules.js/testsResult.html
+++ b/modules.js/testsResult.html
@@ -11,6 +11,7 @@
 <body>
     <div id="qunit"></div>
     <div class="loadTest"></div>
+    <div class="loadTest"></div>
     <div class="loadHTMLTest"></div>
 </body>
 </html>
