started implement modules.loadTemplate tests

--- a/modules.js/testsResult.html
+++ b/modules.js/testsResult.html
@@ -13,6 +13,7 @@
     <div class="loadTest"></div>
     <div class="loadTest"></div>
     <div class="loadHTMLTest"></div>
+    <div class="loadTemplateTest"></div>
 </body>
 </html>
 
