reworked modules.loader. Now we must use new loader api for load all item types: modules, templates, html, css, js. api for modules isn`t changed.

--- a/modules.js/testsResult.html
+++ b/modules.js/testsResult.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div id="qunit"></div>
-    <div class="loadTest"></div>
-    <div class="loadTest"></div>
-    <div class="loadHTMLTest"></div>
-    <div class="loadTemplateTest"></div>
+    <!--<div class="loadTest"></div>-->
+    <!--<div class="loadTest"></div>-->
+    <!--<div class="loadHTMLTest"></div>-->
+    <!--<div class="loadTemplateTest"></div>-->
 </body>
 </html>
 
