--- a/modules.js/templates_forTests/fileInfo/fileInfo.html
+++ b/modules.js/templates_forTests/fileInfo/fileInfo.html
@@ -1,4 +1,4 @@
-<div class="fileInfo" fileNameRaw=$fileNameRaw; lastModifiedDateRaw=$lastModifiedDate;>
+<div class="fileInfo" data-fileNameRaw=$fileNameRaw; data-lastModifiedDateRaw=$lastModifiedDate; data-selected=$isSelected;>
     <div class="fileInfo_checkBox"></div>
     <div class="fileInfo_name">$fileName;</div>
     <div class="fileInfo_lastModificationDate">от $lastModifiedDate;</div>
