--- a/modules.js/testsResult.html
+++ b/modules.js/testsResult.html
@@ -10,10 +10,12 @@
 </head>
 <body>
     <div id="qunit"></div>
-    <!--<div class="loadTest"></div>-->
-    <!--<div class="loadTest"></div>-->
-    <!--<div class="loadHTMLTest"></div>-->
-    <!--<div class="loadTemplateTest"></div>-->
+    <div class="loadModuleTest"></div>
+    <div class="loadModuleTest"></div>
+    <div class="loadNullModuleTest"></div>
+    <div class="loadNullModuleTest"></div>
+    <div class="loadHTMLTest"></div>
+    <div class="loadTemplateTest"></div>
 </body>
 </html>
 
