--- a/modules/globalNavigationMenu/globalNavigationMenu.html
+++ b/modules/globalNavigationMenu/globalNavigationMenu.html
@@ -2,37 +2,77 @@
     <ul class="globalNavigationMenu_unorderedList">
         <li class="globalNavigationMenu_unorderedList_item">
             <a class="globalNavigationMenu_unorderedList_item_link" href="#">
-                Best blog about modules.js
+                &darr; Отдых с удовольствием
             </a>
             <div class="globalNavigationMenu_unorderedList_dropDownListSpace">
                 <ul class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList">
                     <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
                         <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
-                           href="http://blog.trukhin.com">
-                            blog.trukhin.com
+                           href="/protected/semantics/index.html">
+                            Массаж
                         </a>
                     </li>
-                    <!--<li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">-->
-                        <!--<a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"-->
-                           <!--href="#">-->
-                            <!--Центр обработки данных-->
-                        <!--</a>-->
-                    <!--</li>-->
+                    <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
+                        <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
+                           href="/protected/processing_demo/index.html">
+                            Сауна
+                        </a>
+                    </li>
+                    <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
+                        <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
+                           href="/protected/processing_demo/index.html">
+                            Спортзал
+                        </a>
+                    </li>
+                    <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
+                        <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
+                           href="/protected/processing_demo/index.html">
+                            Бассейн
+                        </a>
+                    </li>
                 </ul>
             </div>
         </li>
         <li class="globalNavigationMenu_unorderedList_item">
             <a class="globalNavigationMenu_unorderedList_item_link" href="#">
-                My email and contacts
+                &darr; Условия для Вас
             </a>
             <div class="globalNavigationMenu_unorderedList_dropDownListSpace">
                 <ul class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList">
                     <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
                         <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
-                           href="mailto:yuri@trukhin.com">
-                            yuri@trukhin.com
+                           href="/protected/semantics/index.html">
+                            Цены
                         </a>
                     </li>
+                    <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
+                        <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
+                           href="/protected/processing_demo/index.html">
+                            Схема проезда
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </li>
+        <li class="globalNavigationMenu_unorderedList_item">
+            <a class="globalNavigationMenu_unorderedList_item_link" href="#">
+                &darr; Акции
+            </a>
+            <div class="globalNavigationMenu_unorderedList_dropDownListSpace">
+                <ul class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList">
+                    <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
+                        <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
+                           href="/protected/semantics/index.html">
+                            Жаркие дни
+                        </a>
+                    </li>
+                    <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
+                        <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
+                           href="/protected/processing_demo/index.html">
+                            Приведи друга
+                        </a>
+                    </li>
+
                 </ul>
             </div>
         </li>
