--- a/modules/globalNavigationMenu/globalNavigationMenu.html
+++ b/modules/globalNavigationMenu/globalNavigationMenu.html
@@ -2,32 +2,32 @@
     <ul class="globalNavigationMenu_unorderedList">
         <li class="globalNavigationMenu_unorderedList_item">
             <a class="globalNavigationMenu_unorderedList_item_link" href="#">
-                &darr; Отдых с удовольствием
+                &#x2193; Отдых с удовольствием
             </a>
             <div class="globalNavigationMenu_unorderedList_dropDownListSpace">
                 <ul class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList">
                     <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
                         <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
                            href="/protected/semantics/index.html">
-                            Массаж
+                            &#x21F2; Массаж
                         </a>
                     </li>
                     <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
                         <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
                            href="/protected/processing_demo/index.html">
-                            Сауна
+                            &#x21F2; Сауна
                         </a>
                     </li>
                     <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
                         <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
                            href="/protected/processing_demo/index.html">
-                            Спортзал
+                            &#x21F2; Спортзал
                         </a>
                     </li>
                     <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
                         <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
                            href="/protected/processing_demo/index.html">
-                            Бассейн
+                            &#x21F2; Бассейн
                         </a>
                     </li>
                 </ul>
@@ -35,20 +35,20 @@
         </li>
         <li class="globalNavigationMenu_unorderedList_item">
             <a class="globalNavigationMenu_unorderedList_item_link" href="#">
-                &darr; Условия для Вас
+                &#x2193; Условия для Вас
             </a>
             <div class="globalNavigationMenu_unorderedList_dropDownListSpace">
                 <ul class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList">
                     <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
                         <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
                            href="/protected/semantics/index.html">
-                            Цены
+                            &#x21F2; Цены
                         </a>
                     </li>
                     <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
                         <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
                            href="/protected/processing_demo/index.html">
-                            Схема проезда
+                            &#x21F2; Схема проезда
                         </a>
                     </li>
                 </ul>
@@ -56,20 +56,20 @@
         </li>
         <li class="globalNavigationMenu_unorderedList_item">
             <a class="globalNavigationMenu_unorderedList_item_link" href="#">
-                &darr; Акции
+                &#x2193; Акции
             </a>
             <div class="globalNavigationMenu_unorderedList_dropDownListSpace">
                 <ul class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList">
                     <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
                         <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
                            href="/protected/semantics/index.html">
-                            Жаркие дни
+                            &#x21F2; Жаркие дни
                         </a>
                     </li>
                     <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
                         <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
                            href="/protected/processing_demo/index.html">
-                            Приведи друга
+                           &#x21F2; Приведи друга
                         </a>
                     </li>
 
