data renamed to dataObject in Event.sendMessage

--- a/modules/globalNavigationMenu/globalNavigationMenu.html
+++ b/modules/globalNavigationMenu/globalNavigationMenu.html
@@ -2,32 +2,25 @@
     <ul class="globalNavigationMenu_unorderedList">
         <li class="globalNavigationMenu_unorderedList_item">
             <a class="globalNavigationMenu_unorderedList_item_link" href="#">
-                &#x2193; Отдых с удовольствием
+                &#x21F2; Главная
+            </a>
+        </li>
+        <li class="globalNavigationMenu_unorderedList_item">
+            <a class="globalNavigationMenu_unorderedList_item_link" href="#">
+                &#x2193; Клиентам
             </a>
             <div class="globalNavigationMenu_unorderedList_dropDownListSpace">
                 <ul class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList">
                     <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
                         <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
                            href="/protected/semantics/index.html">
-                            &#x21F2; Массаж
+                            &#x21F2; Уход за материалами
                         </a>
                     </li>
                     <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
                         <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
                            href="/protected/processing_demo/index.html">
-                            &#x21F2; Сауна
-                        </a>
-                    </li>
-                    <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
-                        <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
-                           href="/protected/processing_demo/index.html">
-                            &#x21F2; Спортзал
-                        </a>
-                    </li>
-                    <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
-                        <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
-                           href="/protected/processing_demo/index.html">
-                            &#x21F2; Бассейн
+                            &#x21F2; Композиции
                         </a>
                     </li>
                 </ul>
@@ -35,46 +28,18 @@
         </li>
         <li class="globalNavigationMenu_unorderedList_item">
             <a class="globalNavigationMenu_unorderedList_item_link" href="#">
-                &#x2193; Условия для Вас
+                &#x21F2; Прайс
             </a>
-            <div class="globalNavigationMenu_unorderedList_dropDownListSpace">
-                <ul class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList">
-                    <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
-                        <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
-                           href="/protected/semantics/index.html">
-                            &#x21F2; Цены
-                        </a>
-                    </li>
-                    <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
-                        <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
-                           href="/protected/processing_demo/index.html">
-                            &#x21F2; Схема проезда
-                        </a>
-                    </li>
-                </ul>
-            </div>
         </li>
         <li class="globalNavigationMenu_unorderedList_item">
             <a class="globalNavigationMenu_unorderedList_item_link" href="#">
-                &#x2193; Акции
+                &#x21F2; О нас
             </a>
-            <div class="globalNavigationMenu_unorderedList_dropDownListSpace">
-                <ul class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList">
-                    <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
-                        <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
-                           href="/protected/semantics/index.html">
-                            &#x21F2; Жаркие дни
-                        </a>
-                    </li>
-                    <li class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item">
-                        <a class="globalNavigationMenu_unorderedList_dropDownListSpace_dropDownList_item_link"
-                           href="/protected/processing_demo/index.html">
-                           &#x21F2; Приведи друга
-                        </a>
-                    </li>
-
-                </ul>
-            </div>
+        </li>
+        <li class="globalNavigationMenu_unorderedList_item">
+            <a class="globalNavigationMenu_unorderedList_item_link" href="#">
+                &#x21F2; Контакты
+            </a>
         </li>
     </ul>
 </div>
