implemented addListeners with tests, addContextListeners without tests, removeListeners without tests

--- a/tests/index.html
+++ b/tests/index.html
@@ -5,7 +5,7 @@
     <title>Modules.js Tests Result</title>
     <link rel="stylesheet" type="text/css" href="libs/qunit.css">
     <script src="libs/qunit.js" type="text/javascript"></script>
-    <script src="modules.min.js" type="text/javascript"></script>
+    <script src="modules.js" type="text/javascript"></script>
     <script src="modulesTests.js" type="text/javascript"></script>
 </head>
 <body>
