added test for Module.Loaded.load (itemType=Modules.MODULE, path, itemName, className, callback): check for callback excecuted

--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
     </div>
 </div>
 <div class="footer"></div>
+<script>
+    (function(){
+        alert("Hello, JetBrains");
+    }());
+</script>
 </body>
 </html>
