Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
 <h3>
 <a name="the-framework-for-creating-modular-web-clients" class="anchor" href="#the-framework-for-creating-modular-web-clients"><span class="octicon octicon-link"></span></a>The framework for creating modular web clients</h3>
 
+<p>Copyright 2012-2013 Yuri Trukhin</p>
+
+<p>Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at</p>
+
+<p><a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></p>
+
+<p>Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.</p>
+
 <p><a href="http://alm.geo4geo.com/gitblit/summary/modules.js.git">Main GIT Repository</a> (Login: guest , Password: guest)</p>
 
 <p><a href="http://alm.geo4geo.com/youtrack">Main Bug Tracker</a> -&gt; Login as guest -&gt; Issues Page</p>
@@ -48,7 +62,7 @@
 
 <p><a href="https://bitbucket.org/trukhinyuri/modules.js/issues?status=new&amp;status=open">Bugtracker @BitBucket</a></p>
 
-<p>API DOCS path: /jsDoc</p>
+<p>See modules.js api documentation and examples in <strong>modules.js/jsDoc</strong> folder.</p>
 
 <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=CFZMK8KLFSJC4">Please, DONATE to the modules.js project!</a></p>
       </section>
