--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.</p>
 
+<p><a href="http://webstore.pw/modulesjs">Official website (Coming soon http://webstore.pw/modulesjs)</a></p>
+
 <p><a href="http://alm.geo4geo.com/gitblit/summary/modules.js.git">Main GIT Repository</a> (Login: guest , Password: guest)</p>
 
 <p><a href="http://alm.geo4geo.com/youtrack">Main Bug Tracker</a> -&gt; Login as guest -&gt; Issues Page</p>
