--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@ limitations under the License.</p>
 <p>See modules.js api documentation and examples in <strong>modules.js/jsDoc</strong> folder.</p>
 
 <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=CFZMK8KLFSJC4">Please, DONATE to the modules.js project!</a></p>
+
+<h3>
+<a name="current-status" class="anchor" href="#current-status"><span class="octicon octicon-link"></span></a>Current status</h3>
+
+<p>2013.09.06: preparing to 1.0 beta¸</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/trukhinyuri">trukhinyuri</a></p>
