Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ limitations under the License.</p>
 <h3>
 <a name="current-status" class="anchor" href="#current-status"><span class="octicon octicon-link"></span></a>Current status</h3>
 
-<p>2013.09.06: preparing to 1.0 beta¸</p>
+<p>Sep 06, 2013: preparing to 1.0 beta</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/trukhinyuri">trukhinyuri</a></p>
