--- a/tests/index.html
+++ b/tests/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Modules.js Tests Result</title>
-    <link rel="stylesheet" type="text/css" href="libs/qunit.css">
-    <script src="libs/qunit.js" type="text/javascript"></script>
-    <script src="modules.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="../bower_components/qunit/qunit/qunit.css">
+    <script src="../bower_components/qunit/qunit/qunit.js" type="text/javascript"></script>
+    <script src="../modules.js" type="text/javascript"></script>
     <script src="modulesTests.js" type="text/javascript"></script>
 </head>
 <body>
@@ -18,4 +18,3 @@
 <div class="loadTemplateTest"></div>
 </body>
 </html>
-
