Itinial localization support

--- a/tests/index.html
+++ b/tests/index.html
@@ -16,5 +16,6 @@
 <div class="loadNullModuleTest"></div>
 <div class="loadHTMLTest"></div>
 <div class="loadTemplateTest"></div>
+<div class="loadLocModuleTest"></div>
 </body>
 </html>
