Removed obsolete DOM methods. Refactoring method buildDocumentURLWithRelativePath Added tests for asyncRequest + refactoring

--- a/tests.html
+++ b/tests.html
@@ -16,7 +16,7 @@
 <script>
     mocha.setup('bdd');
 </script>
-<script type="module" src="test.js"></script>
+<script type="module" src="tests.js"></script>
 <script type="module">
     mocha.checkLeaks();
     mocha.run();
