--- a/tests.html
+++ b/tests.html
@@ -19,7 +19,11 @@
 <script type="module" src="tests.js"></script>
 <script type="module">
     mocha.checkLeaks();
+    mocha.globals(["__________ModulesGlobalInternalInfo__________"]);
     mocha.run();
 </script>
+<div class="modulesSpace">
+
+</div>
 </body>
 </html>
